# gimc

./: .gitignore  CMakeLists.txt  README.md
include/core_lib/: calcs.h  config.h  parser.h  utils.h
src/: gimc.cpp
src/core_lib/: calcs.cpp  config.cpp  parser.cpp  utils.cpp
